# RayTracingRenderer

./: CMakeLists.txt  Dependency.cmake
src/: main.cpp
src/Math/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
src/Object/: Diagram.h  Sphere.cpp  Sphere.h
src/Render/: Context.cpp  Context.h  Ray.cpp  Ray.h
